--- a/packages/compositions/a/package.json
+++ b/packages/compositions/a/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@repo/components.a": "*"
+    "@repo/components.a": "1.0.0"
   },
   "keywords": [],
   "author": "",
