Add design-tokens as dependency

--- a/packages/compositions/ab/package.json
+++ b/packages/compositions/ab/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@repo/components.a": "1.0.0",
-    "@repo/components.b": "1.0.0"
+    "@repo/components.b": "1.0.0",
+    "@repo/design-tokens": "^1.0.0"
   }
 }
