--- a/packages/components/b/package.json
+++ b/packages/components/b/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@repo/design-tokens": "^1.0.0"
+    "@repo/design-tokens": "1.0.0"
   }
 }
