--- a/packages/compositions/a/package.json
+++ b/packages/compositions/a/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@repo/components.a": "1.0.0",
-    "@repo/design-tokens": "^1.0.0"
+    "@repo/design-tokens": "1.0.0"
   },
   "keywords": [],
   "author": "",
