--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "version-monorepo",
+  "name": "@dlemvigh/version-monorepo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
+    "tag": "changeset",
+    "version": "changeset version",
+    "publish": "changeset publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +19,10 @@
     "packages/utils/*",
     "packages/config/*"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.28.1"
   }
