--- a/packages/components/a/package.json
+++ b/packages/components/a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlemvigh/version-monorepo.components.a",
-  "version": "1.0.2",
+  "version": "1.1.0-my-experiement.0",
   "description": "",
   "main": "index.ts",
   "repository": {
