--- a/packages/compositions/a/package.json
+++ b/packages/compositions/a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlemvigh/version-monorepo.compositions.a",
-  "version": "2.0.0-my-experiement.2",
+  "version": "2.0.0-my-experiement.3",
   "description": "",
   "main": "index.ts",
   "repository": {
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@dlemvigh/version-monorepo.components.a": "1.0.2",
+    "@dlemvigh/version-monorepo.components.a": "1.1.0-my-experiement.0",
     "@dlemvigh/version-monorepo.design-tokens": "1.0.2"
   },
   "keywords": [],
