RELEASING: Releasing 3 package(s)
Releases:
  @dlemvigh/version-monorepo.components.a@1.1.0
  @dlemvigh/version-monorepo.compositions.a@2.0.0
  @dlemvigh/version-monorepo.compositions.ab@1.0.3

[skip ci]

--- a/packages/components/a/package.json
+++ b/packages/components/a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlemvigh/version-monorepo.components.a",
-  "version": "1.1.0-my-experiement.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.ts",
   "repository": {
